# jake-bot-3000

./: .gitignore  README.md  attack_bot_test.py  color_utils.py  food_area_config.txt  mouse_movement.py  pixel_selection.py  pyproject.toml  requirements.txt  runescape_bot.py  screenshot_utils.py
jake/: __init__.py  buy_iron_script.py  config_manager.py  fishing_bot.py  pixel_clicker.py  pixel_selection.py  runescape_bot.py  screenshot_utils.py
jake/bots/: attack_bot.py  buy_iron_bot.py  fishing_bot.py
jake/examples/: __init__.py  attack_and_loot_bot.py  attack_bot_example.py  bot_config.json  break_log.txt  buy_iron_example.py  food_area_config.txt  init_attack_bot_gui.py  init_buy_iron_config.py  init_config.py  init_fishing_config.py  runescape_bot_example.py  simple_example.py  visualize_config.py
jake/path/: __init__.py  bezier_mouse_movement.py  path_augmenter.py
jake_v2/: README.md  __init__.py  break_log.txt  color_picker.py  environment.yml  health_bar_config.txt  loot_config.txt  pixel_selection.py  pygame_path_test.py  pyproject.toml  runescape_bot.py
jake_v2/examples/: runescape_bot_example.py  simple_example.py
jake_v2/path/: data_collection.py  human_path_finder.py  path_visualizer.py  pygame_path_test.py  remove_duplicate_paths.py
jake_v2/runescape_pro.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
